tests/rosetta/out/C/array-concatenation.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:46Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:46Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_int concatInts(list_int a, list_int b) {
  list_int out = list_int_create(0);
  for (int tmp1 = 0; tmp1 < a.len; tmp1++) {
    int v = a.data[tmp1];
    out = 0;
  }
  for (int tmp2 = 0; tmp2 < b.len; tmp2++) {
    int v = b.data[tmp2];
    out = 0;
  }
  return out;
}

list_int concatAny(list_int a, list_int b) {
  list_int out = list_int_create(0);
  for (int tmp3 = 0; tmp3 < a.len; tmp3++) {
    int v = a.data[tmp3];
    int tmp4_data[1];
    list_int tmp4 = {1, tmp4_data};
    tmp4.data[0] = v;
    list_int tmp5 = concat_list_int(out, tmp4);
    out = tmp5;
  }
  for (int tmp6 = 0; tmp6 < b.len; tmp6++) {
    int v = b.data[tmp6];
    int tmp7_data[1];
    list_int tmp7 = {1, tmp7_data};
    tmp7.data[0] = v;
    list_int tmp8 = concat_list_int(out, tmp7);
    out = tmp8;
  }
  return out;
}

int main() {
  list_int a = list_int_create(3);
  a.data[0] = 1;
  a.data[1] = 2;
  a.data[2] = 3;
  list_int b = list_int_create(3);
  b.data[0] = 7;
  b.data[1] = 12;
  b.data[2] = 60;
  list_int tmp9 = list_int_create(3);
  tmp9.data[0] = 1;
  tmp9.data[1] = 2;
  tmp9.data[2] = 3;
  list_int tmp10 = list_int_create(3);
  tmp10.data[0] = 7;
  tmp10.data[1] = 12;
  tmp10.data[2] = 60;
  char *tmp11 = _str(concatInts(tmp9, tmp10));
  printf("%s\n", tmp11);
  list_int i = list_int_create(3);
  i.data[0] = 1;
  i.data[1] = 2;
  i.data[2] = 3;
  list_string j = list_string_create(4);
  j.data[0] = "Crosby";
  j.data[1] = "Stills";
  j.data[2] = "Nash";
  j.data[3] = "Young";
  list_int j = j;
  list_int tmp12 = list_int_create(3);
  tmp12.data[0] = 1;
  tmp12.data[1] = 2;
  tmp12.data[2] = 3;
  char *tmp13 = _str(concatAny(tmp12, j));
  printf("%s\n", tmp13);
  list_int l = list_int_create(3);
  l.data[0] = 1;
  l.data[1] = 2;
  l.data[2] = 3;
  list_int m = list_int_create(3);
  m.data[0] = 7;
  m.data[1] = 12;
  m.data[2] = 60;
  list_int tmp14 = list_int_create(3);
  tmp14.data[0] = 1;
  tmp14.data[1] = 2;
  tmp14.data[2] = 3;
  list_int tmp15 = list_int_create(3);
  tmp15.data[0] = 7;
  tmp15.data[1] = 12;
  tmp15.data[2] = 60;
  char *tmp16 = _str(concatInts(tmp14, tmp15));
  printf("%s\n", tmp16);
  return 0;
}
